--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,20 +12,29 @@ jobs:
     # Be sure to update the Docker image tag below to openjdk version of your application.
     # A list of available CircleCI Docker Convenience Images are available here: https://circleci.com/developer/images/image/cimg/openjdk
     docker:
-      - image: cimg/openjdk:20.0
+      - image: cimg/openjdk:20.0.1
     # Add steps to the job
     # See: https://circleci.com/docs/configuration-reference/#steps
     steps:
       # Checkout the code as the first step.
       - checkout
+
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "pom.xml" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
       # Use mvn clean and package as the standard maven build phase
-      - run:
-          name: Build
-          command: mvn -B -DskipTests clean package
+      - run: mvn dependency:go-offline
+
+      - save_cache:
+          paths:
+              - ~/.m2
+          key: v1-dependencies-{{ checksum "pom.xml" }}
+
       # Then run your tests!
-      - run:
-          name: Test
-          command: mvn test
+      - run: mvn integration-test
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/configuration-reference/#workflows
