--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,16 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
+    <distributionManagement>
+    <repository>
+        <uniqueVersion>false</uniqueVersion>
+        <id>corp1</id>
+        <name>Corporate Repository</name>
+        <url>scp://repo/maven2</url>
+        <layout>default</layout>
+    </repository>
+    </distributionManagement>
+
     <groupId>springframework</groupId>
     <artifactId>mssc-beer-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
