--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,3 +35,9 @@ jobs:
 
       # Then run your tests!
       - run: mvn integration-test
+
+    workflows:
+      sample: # This is the name of the workflow, feel free to change it to better match your workflow.
+        # Inside the workflow, you define the jobs you want to run.
+        jobs:
+          - build-and-test
